fixing issues with bot